# pandoc-agutemplate

./: README.md  setup.cfg
scripts/: md2agu
src/pandoc_agutemplate/data/: agu-docx.tex  agu-reference.docx  agujournal2019.cls  agutemplate.tex  test.md
