[metadata]
name = pandoc agu template
version = 0.0.1
author = Yihe Xu
author_email = xuyihe216@gmail.com
description = Templates and scripts to convert Markdown files to AGU journals format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
	scripts/md2agu
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pandoc_agutemplate = *.tex *.docx


